k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: papa-pasta-main-website
  namespace: papa-pasta
spec:
  selector:
    app: papa-pasta-main-website
  ports:
    - port: 80
      targetPort: 80
