k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: papa-pasta-main-website
  namespace: papa-pasta
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: papa-pasta.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: papa-pasta-main-website
                port:
                  number: 80
